Dibuat menggunakan Colaboratory

--- a/05_Brian_Mohamad_Safiudin_JobsheetMateri3UnInformed.ipynb
+++ b/05_Brian_Mohamad_Safiudin_JobsheetMateri3UnInformed.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMT6u9TcXWqLe364iWdiIW2",
+      "authorship_tag": "ABX9TyM0qen+qs93K3zTMqSuaDNH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 26,
       "metadata": {
         "id": "zg9WVAX54aBX"
       },
@@ -40,7 +40,7 @@
         "graph = {\n",
         "    'A' : ['B','C'],\n",
         "    'B' : ['D','E'],\n",
-        "    'C' : ['F'],\n",
+        "    'C' : ['A','F'],\n",
         "    'D' : [],\n",
         "    'E' : ['F','G'],\n",
         "    'F' : ['H'],\n",
@@ -73,9 +73,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UHC4C2E2GHdO",
-        "outputId": "9541d247-d5c5-476a-8f75-190cf691f6dd"
+        "outputId": "11626818-5e37-4624-f55f-40d9eb27b552"
       },
-      "execution_count": 19,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,6 +203,186 @@
           "text": [
             "Hasil penulusuran graf menggunakan BFS:\n",
             "A B E F G C H D "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "visited = []\n",
+        "queue = []\n",
+        "graph = {\n",
+        "    'A' : ['B','E','F'],\n",
+        "    'B' : ['A','F','G'],\n",
+        "    'C' : ['D','G'],\n",
+        "    'D' : ['C','H'],\n",
+        "    'E' : ['A','F'],\n",
+        "    'F' : ['B',\"E\"],\n",
+        "    'G' : ['B','C','H'],\n",
+        "    'H' : ['D','H']\n",
+        "}\n",
+        "visited = set()\n",
+        "\n",
+        "def dfs(visited, graph, node):\n",
+        "  if node not in visited:\n",
+        "    print (node)\n",
+        "    visited.add(node)\n",
+        "    for neighbour in graph[node]:\n",
+        "      dfs(visited, graph, neighbour)"
+      ],
+      "metadata": {
+        "id": "OAVcWLaATFR_"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hasil penulusuran graf menggunakan DFS:\")\n",
+        "dfs(visited, graph, 'A')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2A0kblrBTKHR",
+        "outputId": "e74eb9fe-5b07-45f7-9f1d-7b5b4fe544e7"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hasil penulusuran graf menggunakan DFS:\n",
+            "A\n",
+            "B\n",
+            "F\n",
+            "E\n",
+            "G\n",
+            "C\n",
+            "D\n",
+            "H\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "graph = {\n",
+        "    'a' : ['b'],\n",
+        "    'b' : ['a','f', 'g'],\n",
+        "    'f' : ['b', 'e'],\n",
+        "    'e' : ['f'],\n",
+        "    'g' : ['c'],\n",
+        "    'c' : ['d', 'g'],\n",
+        "    'd' : ['c', 'h'],\n",
+        "    'h' : ['d']\n",
+        "}\n",
+        "visited = []\n",
+        "queue = []\n",
+        "def bfs(visited, graph, node):\n",
+        "  visited.append(node)\n",
+        "  queue.append(node)\n",
+        "\n",
+        "  while queue:\n",
+        "    s = queue.pop(0)\n",
+        "    print (s, end = \" \")\n",
+        "\n",
+        "    for neighbour in graph[s]:\n",
+        "      if neighbour not in visited:\n",
+        "        visited.append(neighbour)\n",
+        "        queue.append(neighbour)"
+      ],
+      "metadata": {
+        "id": "Av1N1fO2TxRh"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  print(\"Hasil penulusuran graf menggunakan BFS:\")\n",
+        "  bfs(visited, graph, 'a')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4TQI3qPDVdyf",
+        "outputId": "fe4ae4e9-4a36-4855-fc2b-0f80547cc3d1"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hasil penulusuran graf menggunakan BFS:\n",
+            "a b f g e c d h "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "graph = {\n",
+        "    'a' : ['b'],\n",
+        "    'b' : ['a','f', 'g'],\n",
+        "    'f' : ['b', 'e'],\n",
+        "    'e' : ['f'],\n",
+        "    'g' : ['c'],\n",
+        "    'c' : ['d', 'g'],\n",
+        "    'd' : ['c', 'h'],\n",
+        "    'h' : ['d']\n",
+        "}\n",
+        "visited = set()\n",
+        "def dfs(visited, graph, node):\n",
+        "  if node not in visited:\n",
+        "    print (node)\n",
+        "    visited.add(node)\n",
+        "    for neighbour in graph[node]:\n",
+        "      dfs(visited, graph, neighbour)"
+      ],
+      "metadata": {
+        "id": "jxOLgMe-WMVJ"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hasil penulusuran graf menggunakan DFS:\")\n",
+        "dfs(visited, graph, 'a')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7MMpgSzhWOS5",
+        "outputId": "cd7c4764-fe7d-4e69-9b5b-92eb648cb255"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hasil penulusuran graf menggunakan DFS:\n",
+            "a\n",
+            "b\n",
+            "f\n",
+            "e\n",
+            "g\n",
+            "c\n",
+            "d\n",
+            "h\n"
           ]
         }
       ]
